src/main/java/Grammar.txt
=========================================
      MYOPL LANGUAGE SPECIFICATION
=========================================

KEYWORDS:
  VAR, CONST, FUN, INIT, NEW, RETURN, IF, THEN, ELSE, FOR, TO, STEP, WHILE,
  BEGIN, END, CLASS, IMPORT, TRUE, FALSE
  (Keywords are case-sensitive and uppercase. e.g. NEW works, `new` does not.)

COMMENTS:
  # ...           Single-line comment. Everything from # to end of line is ignored.
  #* ... *#       Multi-line comment. Everything between #* and *# is ignored, may span lines.

STRINGS:
  "..."           A string literal. Supports the full set of Java escape sequences:
    \t            tab                  \b      backspace
    \n            newline              \f      form feed
    \r            carriage return      \s      space
    \"            literal double-quote \'      literal single-quote
    \\            literal backslash
    \uXXXX        a unicode character given by four hex digits (e.g. A = A)
    \ddd          a character given by one to three octal digits (\0 .. \377)
                  Any other \x is kept verbatim as the two characters \ and x.

CHARACTERS:
  '...'           A character literal: exactly ONE character between single quotes.
                  Supports the same escapes as strings (\t \b \n \r \f \s \' \" \\,
                  \uXXXX and octal \ddd). An unknown escape \x is just the char x.
                  Stored as a one-character string, so it concatenates and compares
                  with strings ( 'x' == "x" is true ). Empty '' or multi-char 'ab'
                  is a lex-time error.
                    'A'   '7'   '\n'   '\''

BOOLEANS:
  TRUE            The number 1. FALSE is the number 0.
  FALSE           There is a Bool TYPE (so `Bool done = FALSE` and typeOf give
                  "Bool"), but at runtime a boolean is still just a number: 0 is
                  false and any nonzero value is true (the same convention IF /
                  WHILE and the comparison operators use). TRUE / FALSE are
                  readable names you can use anywhere a number is expected, and a
                  Bool parameter/variable also accepts any number.
                    Bool done = FALSE
                    VAR  ready = TRUE          # inferred as Bool
                    IF TRUE THEN PRINT("always runs")
                  The Bool class in the standard library adds logic helpers
                  (and, or, not, xor, ...). See STANDARD CLASS LIBRARY below.

TYPES:
  Every variable has a type. There are five built-in types, plus List and any
  class name as a type, plus Any (a catch-all):

    Int    whole numbers      Int  n = 5
    Dec    decimal numbers    Dec  x = 3.14
    Str    text               Str  s = "hello"
    Chr    one character      Chr  c = 'A'
    Bool   truth (TRUE/FALSE)  Bool ok = TRUE
    List   a list             (declare with VAR, or annotate List xs = [1,2])
    <Class> an instance       Point p = NEW Point(3, 4)
    Any    anything           (used for generic function parameters)

  Under the hood values are unchanged: Bool is still 1/0 and Chr is a
  one-character string, so the type checks are by broad family — Int/Dec/Bool
  all accept a number, Str/Chr accept text, a class type accepts an instance of
  that class. Assigning the wrong family raises a "Type error".

  typeOf(x)           Returns the type name of x as a string ("Int", "Str", a
                      class name, ...). Handy for VAR/CONST-inferred variables.

VARIABLES AND CONSTANTS:
  Type name = expr    Declares a variable with an explicit type, e.g. Int x = 5.
                      A value of the wrong type raises a "Type error".
  VAR name = expr     Declares (or reassigns) a variable and INFERS its type from
                      the value — exactly like Java's `var`.
  CONST name = expr   Like VAR (the type is inferred) but the binding is immutable:
                      reassigning it (with VAR, CONST or a typed form) raises
                      "Cannot reassign constant 'name'".
  An unset identifier reads back as 0, never as an error.

BUILT-IN FUNCTIONS:
  Console:
    PRINT(val1, val2...)     - Writes values to console, separated by spaces, with newline.
    INPUT(prompt?)           - Prompts (optional) and reads one line from stdin. Returns String.
    INPUT_NUM(prompt?)       - Prompts (optional) and reads one line, parsed as a Number. Bad input -> 0.

  Typed input (one line each; the prompt is optional):
    INPUT_STR(prompt?)       - Reads text.                       Returns a Str.
    INPUT_INT(prompt?)       - Reads a whole number (bad -> 0).  Returns an Int.
    INPUT_DEC(prompt?)       - Reads a decimal  (bad -> 0).      Returns a Dec.
    INPUT_BOOL(prompt?)      - "true"/"yes"/"y"/"t"/"1" -> 1, else 0. Returns a Bool.
    INPUT_CHR(prompt?)       - Reads the first character typed.  Returns a Chr.
    (Also available as Int.input(p), Dec.input(p), Str.input(p), Bool.input(p),
     Chr.input(p) and on the Console class.)

  Types:
    typeOf(value)            - Returns the type name of `value` as a Str.

  Files:
    READ_FILE(path)          - Reads the file at `path` and returns its full contents as a String.
    WRITE_FILE(path, text)   - Overwrites (or creates) the file at `path` with `text`. Returns 1.
    APPEND_FILE(path, text)  - Appends `text` to the file at `path` (creates if missing). Returns 1.

  Lists:
    LEN(list)                - Returns number of elements in a list.

EXAMPLES:
  # Console I/O
  VAR name = INPUT("Your name? ")
  PRINT("Hello", name)

  VAR age = INPUT_NUM("Your age? ")
  IF age >= 18 THEN PRINT("Adult") ELSE PRINT("Minor")

  # File I/O
  WRITE_FILE("greeting.txt", "Hello " + name + "!")
  VAR contents = READ_FILE("greeting.txt")
  PRINT("File says:", contents)
  APPEND_FILE("greeting.txt", " You are " + age + " years old.")

OPERATORS:
  Math:       +, -, *, /   (+ also concatenates if either side is text)
  Unary:      -, +         (e.g. -5, -x, -2 * 3; binds tighter than * and /)
  Comparison: ==, !=, <, >, <=, >=   (==/!= also compare chars and strings)
  Logic:      -> (Arrow), = (Assignment in VAR/CONST/FOR)
  Grouping:   ( ), [ ], BEGIN...END
  Member:     . (dot — accesses a class/instance field or method)

GRAMMAR:
  Expression -> VAR ID = Expr | CONST ID = Expr
                | TYPE ID = Expr                      # typed declaration, e.g. Int x = 5
                | IF Expr THEN Expr (ELSE Expr)?      # ELSE may itself be an IF -> "else if"
                | FOR ID = Expr TO Expr (STEP Expr)? THEN Expr
                | WHILE Expr THEN Expr | RETURN Expr?
                | CLASS ID BEGIN Expr* END
                | IMPORT STRING
                | Comparison
  TYPE       -> Int | Dec | Str | Chr | Bool | List | Any | ID   # ID = a class name
  Comparison -> Arithmetic ((EE | NE | LT | GT | LTE | GTE) Arithmetic)*
  Arithmetic -> Term ((PLUS | MINUS) Term)*
  Term       -> Unary ((MUL | DIV) Unary)*
  Unary      -> (PLUS | MINUS) Unary | Factor
  Factor     -> Atom ( (args) | .ID )*
  Atom       -> INT | FLOAT | STRING | CHAR | TRUE | FALSE | ID | [list] | (Expr)
                | FunDef | Constructor | NewExpr | BEGIN Expr* END
  FunDef     -> FUN ID? ( ( TYPE ID (, TYPE ID)* )? )   # every parameter is 'Type name'
                  ( -> Expr            # single-line: body is the returned expression
                  | BEGIN Expr* END )  # multi-line:  body is a block, use RETURN to yield
  Constructor-> INIT ( ( TYPE ID (, TYPE ID)* )? )
                  ( -> Expr | BEGIN Expr* END )   # only inside a CLASS body
  NewExpr    -> NEW ID ( ( Expr (, Expr)* )? )    # instantiate a class into an object

=========================================
      FUNCTIONS
=========================================

Functions are defined with FUN and can be written in two forms. EVERY parameter
must declare a type, written as 'Type name' (the type before the name). Calling a
function with an argument of the wrong type raises a "Type error". Use Any for a
parameter that may receive any type.

SINGLE-LINE (arrow):
  FUN name(Type arg, ...) -> expression
  - The expression after -> is evaluated and returned automatically.
  - The body may span lines visually, but it is a single expression.

  EXAMPLES:
    FUN square(Int n) -> n * n
    FUN status(Dec v) -> IF v > 20 THEN "High" ELSE "Low"
    FUN randomFunction(Int x) -> x * 2

MULTI-LINE (block, terminated by END):
  FUN name(Type arg, ...)
      statement
      statement
      ...
  END
  - No arrow. The body is a block of statements that runs top to bottom.
  - Use RETURN to yield a value and stop the function immediately, even from
    inside an IF / FOR / WHILE. RETURN works only inside a function.
  - With no RETURN, the function yields the value of its last statement.
  - RETURN may be bare (returns nothing) or followed by an expression.

  EXAMPLES:
    FUN classify(n)
        IF n > 0 THEN RETURN "positive"
        IF n < 0 THEN RETURN "negative"
        RETURN "zero"
    END

    FUN firstOver(limit)
        FOR i = 1 TO 100 THEN
            IF i > limit THEN RETURN i
        RETURN 0 - 1
    END

  NOTE: FUN name(args) -> BEGIN ... END is also valid and behaves like the
  multi-line block form.

=========================================
      CLASSES AND MODULES
=========================================

CLASS:
  CLASS ClassName BEGIN
      FUN method(args) -> body
      VAR field = value
  END

  - Declares a named class. Everything between BEGIN and END is the class body.
  - Functions and variables defined inside become members of the class.
  - Members are accessed with dot notation: ClassName.member
  - The class body runs in an isolated scope; outer variables are not visible inside.
  - Class methods receive their sibling members in scope, so one method can call another.

  EXAMPLES:
    CLASS Greeter BEGIN
        FUN hello(name) -> "Hello, " + name + "!"
        VAR version = 1.0
    END
    PRINT(Greeter.hello("World"))        # Hello, World!
    PRINT("Version:", Greeter.version)   # Version: 1.0

    CLASS MathUtils BEGIN
        FUN double(n) -> n * 2
        FUN isEven(n) -> IF n * 1 == (n / 2) * 2 THEN "even" ELSE "odd"
        VAR E = 2.71828
    END
    PRINT(MathUtils.double(7))           # 14.0
    PRINT(MathUtils.E)                   # 2.71828

  There are two ways to use a class:
    - Static:   call straight off the class, sharing the class's own fields:
                  Calculator.add(10, 5)
    - Instance: build an object with NEW (see below); each object has its own fields.

CONSTRUCTORS (INIT) AND OBJECTS (NEW):
  INIT(args) BEGIN ... END
    - A constructor: written like a method but with INIT instead of FUN and no name.
    - Runs when you create an object with NEW, and sets up that object's fields.
    - Lives inside a CLASS body. A class may have at most one INIT.

  NEW ClassName(args)
    - Creates a new object (instance) of the class: copies the class's members into
      a fresh per-object scope, runs INIT(args) to populate fields, and yields the object.
    - Store it in a variable, then call methods on it with dot notation.
    - Each object has independent fields; mutating one does not affect another.
    - A missing constructor argument defaults to 0.

  EXAMPLE:
    CLASS Point BEGIN
        VAR px = 0
        VAR py = 0
        INIT(a, b) BEGIN
            VAR px = a
            VAR py = b
        END
        FUN sum() -> px + py
        FUN describe() -> "Point(" + px + ", " + py + ")"
    END
    VAR p = NEW Point(3, 4)
    PRINT(p.sum())                       # 7.0
    PRINT(p.describe())                  # Point(3.0, 4.0)
    PRINT(NEW Point(1, 2).describe())    # Point(1.0, 2.0)   (chained)

  STATEFUL METHODS: a method may reassign its object's own fields (with VAR), and
  the change PERSISTS on that object for later calls — so objects can carry state
  that evolves over time. See SCL/Random.myopl, whose draw methods advance an
  internal seed. (Only the object's declared fields persist; brand-new names and
  parameters created inside a method stay local to that call.)

IMPORT:
  IMPORT "path/to/File.myopl"

  - Reads and executes the target .myopl file.
  - Every class (and top-level symbol) defined in that file is merged into the
    current scope — equivalent to pasting the file's source right here.
  - The path may be relative (resolved from the directory of the running script)
    or absolute.
  - Circular imports are not detected; avoid them.

  EXAMPLE (assuming MathHelper.myopl defines CLASS MathHelper):
    IMPORT "MathHelper.myopl"
    PRINT(MathHelper.add(3, 4))          # 7.0
    PRINT(MathHelper.PI)                 # 3.14159

=========================================
      STANDARD CLASS LIBRARY (SCL)
=========================================

The SCL is a set of .myopl classes shipped with the language under
src/main/java/SCL/.

AUTO-LOADED (no IMPORT needed):
  Every file in SCL/STD/ is loaded at startup, so its class is available
  immediately. The scan is NON-recursive (only files directly in SCL/STD/).

    Int        - companion class for the Int type: of, abs, sign, min, max, clamp,
                 isEven, isOdd, pow, mod, factorial, gcd, lcm, toString, input
    Dec        - companion class for the Dec type: floor, ceil, round, trunc, frac,
                 abs, sign, sqrt, pow, min, max, clamp, lerp, approxEqual, input
    Str        - companion class for the Str type: isEmpty, equals, concat, surround,
                 repeat, line, quote, of, input
    Chr        - companion class for the Chr type: equals, isVowel, isDigit, repeat,
                 toString, input
    Math       - constants (PI, E, TAU, PHI, SQRT2, LN2, LN10; lowercase aliases
                 too) and numeric helpers: abs, sign, min, max, clamp, sqrt, pow,
                 mod, floor, ceil, round, factorial, gcd, lcm, isPositive,
                 isNegative, isZero, approxEqual, lerp, remap, ...
    Bool       - companion class for the Bool type. TRUE / FALSE plus logic: not,
                 and, or, xor, nand, nor, implies, iff, toString, parse, input, ...
    Compare    - eq, neq, lt, gt, lte, gte, between, inRange, max3, min3, clamp,
                 approxEqual
    Convert    - unit conversions (temperature, length, mass, time, angle, data)
    Logging    - info, warn, error, debug, success, divider, banner, step, blank
    Constants  - common math / physics / time constants in one place
    Assert     - assertEqual, assertTrue, assertApprox, assertPositive, ... (prints
                 PASS / FAIL)
    Console    - println, print, readLine, nextInt, nextDouble (Scanner-like)

  USE: just call them, e.g.
    PRINT(Math.sqrt(2))
    IF Bool.and(a, b) THEN PRINT("both true")

NEEDS IMPORT (top-level SCL/, not auto-loaded):
    SCL/Geometry.myopl - areas, perimeters, volumes, distances (uses Math)
    SCL/Physics.myopl  - force, energy, momentum, pressure, ... (uses Math)
    SCL/Finance.myopl  - simple/compound interest, future/present value, ... (uses Math)
    SCL/Calendar.myopl - daysInMonth, isLeapYear, quarterOf, isWeekend (uses Math)
    SCL/FileIO.myopl   - read, write, append, clear, copy, writeAndConfirm
    SCL/Random.myopl   - seedable pseudo-random generator (deterministic per seed)
    SCL/List.myopl     - growable ordered list (ArrayList-like)

    IMPORT "SCL/Geometry.myopl"
    PRINT(Geometry.distance2D(0, 0, 3, 4))      # 5.0

    IMPORT "SCL/List.myopl"
    VAR xs = NEW List()
    xs.add(10)  xs.add(20)
    PRINT(xs.get(1))                            # 20.0

=========================================
      HOW TO RUN
=========================================
  Compile (from src/main/java):  javac Shell.java lang/*.java
  Run:                           java Shell
                                 (Shell asks for a file path; blank = REPL)
  The SCL/STD classes auto-load before your script runs.
